# lmc-5

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  __init__.py  app.py  docker-compose.yml  importers.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request
docs/: AUTOMATION_BOUNDARIES.md  CLAUDE_PROJECT_INSTRUCTIONS.md  CONNECTING_XYZEM.md  DEEPSEEK_INTEGRATION.md  DEPLOYMENT.md  E_EXPERIENCE.md  E_OPTIONAL_TRAIT_PATCH.md  FORGE_AND_SWAP.md  HEARTBEAT_AND_EMOTION_FORMAT.md  HOOKS_AND_RECALL.md  IMPLEMENTATION_ORDER.md  LMC-5专业思维导图_AI版_20260702.md  LMC-5可分享导览与安装自检_20260702.md  MEM0_UPDATE_NOTES_2026-06-21.md  M_METABOLISM.md  PERSONA_MODE.md  RECALL_FUSION_AB_20260706.md  REFINED_SESSION_CARRYOVER.md  SESSION_CHECKLIST.md  UPSTREAM_README.md  VECTOR_BACKENDS.md  X_TIMELINE.md  Y_RELATIONS.md  Z_FACT_EVOLUTION.md  architecture.md  claude_code.md  codex-for-oss-application.md  credits.md  project_hypothesis.md  safety.md  why_openai.md  xyzem_consolidation.md
examples/: demo.py  seed.jsonl  two_hop_graph.py
extras/: __init__.py
tests/: test_consolidation.py  test_current_state.py  test_dream_runner.py  test_entities.py  test_events.py  test_examples.py  test_extras_import.py  test_fact_evolution.py  test_hippocampus.py  test_metabolism.py  test_redact.py  test_refined_session_carryover.py  test_store.py  test_temporal_recall.py  test_vectors.py
tests_web/: test_app_surface.py  test_config_and_store.py  test_importers.py  test_oauth.py  test_scoring.py
(+55 files in other folders)
